Correcting some bugs

--- a/data/train&save_models.ipynb
+++ b/data/train&save_models.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from lenskit.datasets import MovieLens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "BLAS using multiple threads - can cause oversubscription\n",
+      "found 1 potential runtime problems - see https://boi.st/lkpy-perf\n"
+     ]
+    }
+   ],
    "source": [
     "biased_mf_6 = BiasedMF(100, reg=1)\n",
     "alg_biased_mf_6 = Recommender.adapt(biased_mf_6)\n",
-    "alg_biased_mf_6.fit(data.ratings.sample(frac=.01))\n",
+    "alg_biased_mf_6.fit(data.ratings)\n",
     "\n",
     "binpickle.dump(alg_biased_mf_6, \"models/biased_mf_6_model.bpk\",codec=binpickle.codecs.Blosc('zstd', 9))"
    ]
@@ -99,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "item_knn_3 = ItemItem(100, 5)\n",
     "alg_item_knn_3 = Recommender.adapt(item_knn_3)\n",
-    "alg_item_knn_3.fit(data.ratings.sample(frac=.1))\n",
+    "alg_item_knn_3.fit(data.ratings)\n",
     "    \n",
     "binpickle.dump(alg_item_knn_3, \"models/item_knn_3_model.bpk\",codec=binpickle.codecs.Blosc('zstd', 9))"
    ]
@@ -119,9 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "BLAS using multiple threads - can cause oversubscription\n",
+      "found 1 potential runtime problems - see https://boi.st/lkpy-perf\n"
+     ]
+    }
+   ],
    "source": [
     "implicit_mf_4 = ImplicitMF(30, reg=1, use_ratings=True)\n",
     "alg_implicit_mf_4 = Recommender.adapt(implicit_mf_4)\n",
